# pythonKnowledge

./: .gitignore  AlgoritmoDeBerkeley.py  AlgoritmoRecursivosVSAlgoritmoIterativo.py  AlgoritmoVoraz.py  AlgoritmoVoraz2.py  AlgoritmosOrdenamiento.py  DSA.py  EulerAlgorithm.py  Langara_CPSC_4800_Asigment_2.py  Primes.py  custom_Crypto.py  diagramadeEnciptacionCustom.drawio  generadorlinealcongruencial.rar  lorenzo.py  pepe.py  pythoSimpleETL.py  pythosnScrapeTweets.py  text-query-tweets.csv  tictactoe.py  varianzaNumerosPseudoaleatorios.py
AWS ReStart/: caesar_cypher.py  debug.py  demo-function.py  demo-os.py  dict-function.py  modules.py  my_file.txt  open-function.py  prime_generator.py  print-function.py  results.txt  sum-function.py
Computer_Theory/: CustomRamdomAndLegenth.py  Vocals.py  atLeast.py  binaryToDecimal.py  palyndrome.py  reverse.py  taller1.py
DBUtilitys/: logactualizacionesgit.py  pcsaccesos.py
ETLTODW/: ETL.py  SnapshotCreator.py  config.ini  dao.py  dataFakerLoad.py  database.py  databaseResouce.py  db.sql  main.py  pyproject.toml  pythonETLToDataWareHouse.py
ETLTODW/models/: tiempo.py
ETLTODW/models/OLAP/: cliente.py  tiempo.py
ETLTODW/models/OLTP/: Models.py  clientes.py  ventas.py
Game lifeGame/: game.py  gl.py
ManagerRepositories/: test.py
OCR/: out_text.txt  pruba_1_ocr.py  prueba_1_ocr_rest.py  pyproject.toml
PDFUtils/: adsfasd.py  mergepdfwithsignature.py
bot_BBDDM/bat/: dwn_data.bat
bot_BBDDM/py/: ACT_DASHBOARD_PBI.py  ETL.py  Models.py  Utils.py  dao.py  database.py  pyproject.toml  selenium_test.py  utils_xls_csv.py
bot_RUES/: downloadDataPerNIT.py
contest_challanges/: BoiledEggs.py  NlogoniaDivision.py  TrailingDigits.py  UncleJack.py  matryoskaSequence.py
dashboard multipage financial report/: Utils.py  app.py  graph1.py
dashboard multipage financial report/Data/: actualSeasonal.csv  adjustedSales.csv  chinaSpr.csv  energyShare.csv  epxEquity.csv  globalMarket.csv  growthGdp.csv  industrailProd.csv  oecdCommersial.csv  oecdIndustry.csv  production2015.csv  productionCost.csv  supplyDemand.csv  wtiOilprices.csv  wtiPrices.csv
flight system/: HomePage.py  data.py  flight_system.py  generador_lineal_congruencial.py  main.py  navbar.py  pyproject.toml  readme.md
flight system/assets/css/: header.css
flight system/callbacks/: Homepage_callbacks.py
fundamentals/: DataStrcutures.py  Excepcions.py  Interfaces.py  ejecuciones.py  encapsulation.py  inhetirance.py  regular_expresions.py  simpleClass.py
generadorlinealcongruencial/: generador_lineal_congruencial.py  lgc_output.txt  pyproject.toml
jsonUtils/: json1.json  mergeJSON.py
mineria de datos/: DBmanager.py  ModeloEntidades.drawio  OBSERVACIONESPORGRUPO.xlsx  PROMEDIOprofesor.xlsx  RESULTADOPORGRUPO.xlsx  cargarBasededatos.py  crear_db_model_from_orm.py  pyproject.toml
robo comptox.epa.gov/: robot.py
sav/: openSAv.py
