[tool.poetry]
name = "ETLTODW"
version = "0.1.0"
description = ""
authors = ["qleoz12 <kintaroloop@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
PyNaCl = "^1.4.0"
structlog = "^21.1.0"
colorama = "^0.4.4"
marshmallow = "^3.11.1"
marshmallow-oneofschema = "^2.1.0"
aiohttp = "^3.7.4"
Faker = "^9.2.0"
pyodbc = "^4.0.32"
mimesis = "^4.1.3"
pandas = "^1.3.3"
SQLAlchemy = "^1.4.25"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.6"
black = { version = "^20.8b1", allow-prereleases = true }
yapf = "^0.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
