[tool.poetry]
name = "pruba_1_ocr"
version = "0.1.0"
description = ""
authors = ["qleoz12 <kintaroloop@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytesseract = "^0.3.8"
pdf2image = "^1.16.0"
numpy = "^1.22.2"
matplotlib = "^3.5.1"
opencv-python = "^4.5.5"
requests = "^2.27.1"
xmltodict = "^0.12.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
