[tool.poetry]
name = "mineria_datos"
version = "0.1.0"
description = ""
authors = ["qleoz12 <kintaroloop@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytesseract = "^0.3.8"
pdf2image = "^1.16.0"
numpy = "^1.22.2"
matplotlib = "^3.5.1"
opencv-python = "^4.5.5"
requests = "^2.27.1"
xmltodict = "^0.12.0"
pandas = "^1.4.1"
openpyxl = "^3.0.9"
SQLAlchemy = "^1.4.32"
mysql-connector-python = "^8.0.28"
PyMySQL = "^1.0.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
