[tool.poetry]
name = "BOT_RETO"
version = "0.1.0"
description = ""
authors = ["qleoz12 <kintaroloop@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
PyNaCl = "^1.4.0"
structlog = "^21.1.0"
colorama = "^0.4.4"
pyodbc = "^4.0.32"
pandas = "^1.3.3"
SQLAlchemy = "^1.4.25"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.6"
black = { version = "^20.8b1", allow-prereleases = true }
yapf = "^0.31.0"

